NetBSD Problem Report #49437

From www@NetBSD.org  Sun Nov 30 21:35:28 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 1FAF9A5864
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 30 Nov 2014 21:35:28 +0000 (UTC)
Message-Id: <20141130213526.DC978A5B2E@mollari.NetBSD.org>
Date: Sun, 30 Nov 2014 21:35:26 +0000 (UTC)
From: jmcneill@invisible.ca
Reply-To: jmcneill@invisible.ca
To: gnats-bugs@NetBSD.org
Subject: mdnsd from 7.0_BETA does not work with 7.99.2 kernel
X-Send-Pr-Version: www-1.0

>Number:         49437
>Category:       kern
>Synopsis:       mdnsd from 7.0_BETA does not work with 7.99.2 kernel
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 30 21:40:00 +0000 2014
>Closed-Date:    Tue Feb 24 20:50:23 +0000 2015
>Last-Modified:  Tue Feb 24 20:50:23 +0000 2015
>Originator:     Jared McNeill
>Release:        7.0_BETA
>Organization:
>Environment:
NetBSD a31 7.99.2 NetBSD 7.99.2 (HUMMINGBIRD_A31) #520: Sun Nov 30 16:22:37 AST 2014  jmcneill@megatron.local:/Users/jmcneill/branches/HEAD/src/sys/arch/evbarm/compile/obj/HUMMINGBIRD_A31 evbarm
>Description:
A 7.99.2 kernel with 7.0_BETA userland fails to start mdnsd. It worked with 7.0_BETA and an older 7.99.1 kernel.
>How-To-Repeat:
a31# mdnsd -debug
mDNSResponder (Engineering Build) starting
mDNSResponder (Engineering Build) stopping
a31#
>Fix:

>Release-Note:

>Audit-Trail:
From: Jared McNeill <jmcneill@invisible.ca>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/49437: mdnsd from 7.0_BETA does not work with 7.99.2
 kernel
Date: Sun, 30 Nov 2014 17:44:35 -0400 (AST)

 Found this in ktrace, possibly why it's exiting at startup:

      38      1 mdnsd    CALL  ioctl(5,SIOCGIFCONF,0x7fffcac8)
      38      1 mdnsd    GIO   fd 5 wrote 8 bytes
         "@8\0\0\0\2400@"
      38      1 mdnsd    RET   ioctl -1 errno 14 Bad address


From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49437 CVS commit: src/sys/net
Date: Sun, 30 Nov 2014 19:27:05 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Dec  1 00:27:05 UTC 2014

 Modified Files:
 	src/sys/net: if.c

 Log Message:
 PR/49437: jmcneill: revert broken changes that broke SIOCGIFCONF (mdnsd uses it)


 To generate a diff of this commit:
 cvs rdiff -u -r1.300 -r1.301 src/sys/net/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49437 CVS commit: src/sys/net
Date: Mon, 8 Dec 2014 04:55:48 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Dec  8 04:55:47 UTC 2014

 Modified Files:
 	src/sys/net: if.c

 Log Message:
 Tweak ifconf (retry)

 The tweak makes the code intention clear and further changes easy.

 No functional change.

 The first trial broke SIOCGIFCONF (PR 49437). So as not to repeat the mistake,
 t_ifconf was added. It should warn if something goes wrong on ifconf.


 To generate a diff of this commit:
 cvs rdiff -u -r1.303 -r1.304 src/sys/net/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Tue, 24 Feb 2015 15:50:23 -0500
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.