PR/49437: jmcneill: revert broken changes that broke SIOCGIFCONF (mdnsd uses it)